Overflow fix for double-scroll bar bug in Chrome.

--- a/css/style.css
+++ b/css/style.css
@@ -365,7 +365,7 @@ ul#walk-list.open {
     #info {
         width: 33%;
         height: 100%;
-        overflow-y: scroll;
+        overflow-y: auto;
     }
 
     #info img {
